- Adding condition to configuraton release;
Signed-off-by: rvcoutinho <me@rvcoutinho.com>